[package]
name = "dd-opentracing-rs"
version = "0.1.0"
authors = ["Aleksandr Ovchinnikov <mail@mr1sunshine.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
serde_json = "1.0"
derivative = "2.1"

[dev-dependencies]
rand = ">=0.3, <0.5"
mersenne_twister = "1.1.1"
lazy_static = "1.4.0"
mock_instant = "0.2"